--- a/dashboard.html
+++ b/dashboard.html
@@ -40,7 +40,7 @@
   <footer>
     <hr class="thin-line"/>
     <hr class="thin-line"/>
-    <p>© 2025 Mi-Vault | Private Vault System</p>
+    <p>© Mi-Vault | Private Vault System</p>
   </footer>
 
   <!-- Script -->
