--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <!-- ❌ Wrong-password Pop-up (Luffy style) -->
   <div id="errorModal" class="modal hidden">
     <div class="modal-content">
-      <img src="assets/luffy-alert.png" alt="Luffy Alert" />
+      <img src="luffy.png" alt="Luffy" />
       <p>❌Wrong Bitch! Leave❌</p>
       <button id="closeError" class="modal-close">OK</button>
     </div>
