--- a/admin-vault.html
+++ b/admin-vault.html
@@ -64,5 +64,11 @@
     }
   </script>
 
+  <footer>
+  <div class="line"></div>
+  <p>&copy; 2025 Mi-Vault. All rights reserved.</p>
+  <div class="line"></div>
+</footer>
+
 </body>
 </html>
