--- a/dashboard.html
+++ b/dashboard.html
@@ -1,10 +1,66 @@
-<!-- dashboard.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Dashboard - Mi-Vault</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    /* Dashboard Enhancements */
+    .vault-links {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      gap: 15px;
+      margin-top: 20px;
+    }
+
+    .vault-button {
+      padding: 12px;
+      background-color: #007bff;
+      color: white;
+      border-radius: 10px;
+      text-align: center;
+      text-decoration: none;
+      font-weight: bold;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      transition: transform 0.3s, background 0.3s;
+    }
+
+    .vault-button:hover {
+      background-color: #0056b3;
+      transform: scale(1.05);
+    }
+
+    .search-bar {
+      margin-top: 20px;
+      margin-bottom: 10px;
+    }
+
+    .search-bar input {
+      width: 100%;
+      padding: 10px;
+      border-radius: 8px;
+      border: 1px solid #555;
+      background-color: #222;
+      color: white;
+    }
+
+    .toggle-mode {
+      position: absolute;
+      top: 15px;
+      right: 15px;
+      background: #007bff;
+      color: white;
+      padding: 6px 12px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    .dark-mode {
+      background-color: #111;
+      color: white;
+    }
+  </style>
 </head>
 <body>
   <!-- Loading GIF -->
@@ -14,18 +70,30 @@
 
   <!-- Dashboard Content -->
   <div class="container" style="display: none;">
+    <button class="toggle-mode" onclick="toggleMode()">🌙 Mode</button>
     <div class="form-box">
       <h2>Welcome to Mi-Vault Dashboard</h2>
-      <p>Select a vault below to access:</p>
-      <div class="vault-links">
+      <p>Browse your vaults securely</p>
+
+      <!-- Search bar -->
+      <div class="search-bar">
+        <input type="text" id="vaultSearch" onkeyup="searchVaults()" placeholder="Search vault...">
+      </div>
+
+      <!-- Vault buttons -->
+      <div class="vault-links" id="vaultLinks">
         <a href="vaults/Muana.html" class="vault-button">Muana's Vault</a>
         <a href="vaults/Another.html" class="vault-button">Another Vault</a>
-        <!-- Add more vault links here -->
+        <a href="vaults/Secret.html" class="vault-button">Secret Vault</a>
+        <a href="vaults/Hidden.html" class="vault-button">Hidden Vault</a>
+        <!-- Add more here -->
       </div>
+
       <button onclick="goBack()">Logout</button>
     </div>
   </div>
 
+  <!-- Footer -->
   <footer>
     <div class="line"></div>
     <p>&copy; Mi-Vault. All rights reserved.</p>
@@ -33,17 +101,32 @@
   </footer>
 
   <script>
-    // Loading screen
+    // Loading
     window.onload = function () {
       setTimeout(() => {
         document.getElementById('loading').style.display = 'none';
         document.querySelector('.container').style.display = 'block';
-      }, 1500); // Adjust time as needed
+      }, 1500);
     };
 
-    // Logout button
+    // Logout
     function goBack() {
       window.location.href = "index.html";
+    }
+
+    // Search Vaults
+    function searchVaults() {
+      const input = document.getElementById('vaultSearch').value.toLowerCase();
+      const links = document.querySelectorAll('#vaultLinks a');
+      links.forEach(link => {
+        const text = link.textContent.toLowerCase();
+        link.style.display = text.includes(input) ? '' : 'none';
+      });
+    }
+
+    // Dark Mode Toggle
+    function toggleMode() {
+      document.body.classList.toggle('dark-mode');
     }
   </script>
 </body>
