--- a/vaults/vaults/Muana.html
+++ b/vaults/vaults/Muana.html
@@ -1,10 +1,11 @@
-<!-- vaults/Muana.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Your Vault - Mi-Vault</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Your Vault - Bitch</title>
   <link rel="stylesheet" href="../style.css" />
+
   <style>
     .vault-container {
       display: flex;
@@ -19,9 +20,10 @@
       background: #111;
       padding: 40px;
       border-radius: 16px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.5);
+      box-shadow: 0 0 12px rgba(0, 0, 0, 0.5);
       max-width: 500px;
       width: 90%;
+      animation: fadeIn 1s ease-in-out;
     }
 
     .vault-box h1 {
@@ -41,33 +43,85 @@
       border: none;
       border-radius: 8px;
       cursor: pointer;
+      transition: 0.3s;
     }
 
     .vault-box button:hover {
       background: #0056b3;
+      transform: scale(1.05);
+    }
+
+    footer {
+      text-align: center;
+      padding: 15px;
+      color: white;
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+    }
+
+    .line {
+      height: 2px;
+      background-color: #000;
+      margin: 5px 0;
+    }
+
+    @keyframes fadeIn {
+      from {opacity: 0; transform: translateY(20px);}
+      to {opacity: 1; transform: translateY(0);}
+    }
+
+    /* Loader */
+    #loader {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      background: #000;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+    }
+
+    #loader img {
+      width: 180px;
     }
   </style>
 </head>
-<body>
 
-  <div class="vault-container">
+<body>
+  <!-- Loading screen -->
+  <div id="loader">
+    <img src="../Jinwoo.gif" alt="Loading..." />
+  </div>
+
+  <!-- Vault Content -->
+  <div class="vault-container" style="display:none;" id="content">
     <div class="vault-box">
-      <h1>Welcome to Your Vault</h1>
+      <h1>Welcome Bitch</h1>
       <p>This space is private and secure.</p>
       <button onclick="goBack()">Logout</button>
     </div>
   </div>
 
+  <footer>
+    <div class="line"></div>
+    <p>&copy; Mi-Vault. All rights reserved.</p>
+    <div class="line"></div>
+  </footer>
+
   <script>
     function goBack() {
       window.location.href = "../index.html";
     }
+
+    // Show content after loading screen
+    window.onload = () => {
+      setTimeout(() => {
+        document.getElementById('loader').style.display = 'none';
+        document.getElementById('content').style.display = 'flex';
+      }, 1000); // Show loader for 1 sec
+    };
   </script>
-  
-<footer>
-  <div class="line"></div>
-  <p>&copy; 2025 Mi-Vault. All rights reserved.</p>
-  <div class="line"></div>
-</footer>
 </body>
 </html>
