--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- ─── Main Content ────────────────────────────────────── -->
   <div class="container" id="main-content" style="display:none;">
     <!-- Zoro GIF header -->
-    <img src="Zoro.gif" alt="Welcome" class="zoro-img" />
+    <img src="zoro.gif" alt="Welcome" class="zoro-img" />
 
     <!-- Login Box -->
     <div class="login-box">
